--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,21 @@
-table, th, td {
+ table, th, td {
+    margin: 10px;
+    text-align: center;
     border: 1px solid;
+    /*border-collapse:collapse;*/
+  } 
+
+  thead {
+    background-color: blueviolet;
   }
+
+  th {
+   padding: 10px;
+  }
+
+  tr:nth-child(even){
+    background-color: aquamarine;
+  }
+
+  
+  /* border: 1px solid; */
